fix(toasts): Update contrast for icons in warning theme (#3384)

--- a/ui/utilities/themes/_index.scss
+++ b/ui/utilities/themes/_index.scss
@@ -85,7 +85,7 @@
 
     .slds-icon,
     .slds-button__icon {
-      fill: $color-text-icon-default;
+      fill: $color-gray-10;
     }
 
     a:not(.slds-button--neutral),
